--- a/styles.css
+++ b/styles.css
@@ -126,8 +126,10 @@ nav {
   flex: 1;
 }
 .right-area img {
-  width: 100%;
-  height: 50%;
+  /* width: 100%; */
+  /* height: 60%; */
+  margin-left: 60px;
+  margin-top: 50px;
 }
 /* 
 * /Section Banner
